Statements UI (#22)
* statements plan

* statements implementation

* statements UI plan

* statements UI faza 1.

* statements UI faza 2.

* statements UI faza 3.

* statements UI faza 4.

* statements UI faza 5.

* statements UI poprawki
