# hexabid-spa/src/app/app.routes.ts
@@ -28,8 +28,8 @@ export const routes: Routes = [
       {
         path: 'sell',
         loadComponent: () =>
-          import('./features/create/auction-create-page.component').then(
-            (m) => m.AuctionCreatePageComponent
+          import('./features/setup/auction-setup-page.component').then(
+            (m) => m.AuctionSetupPageComponent
           )
       },
       {
@@ -65,6 +65,13 @@ export const routes: Routes = [
         loadComponent: () =>
           import('./features/inventory/instance-manager-page.component').then(
             (m) => m.InstanceManagerPageComponent
+          )
+      },
+      {
+        path: 'me/participations',
+        loadComponent: () =>
+          import('./features/participation/my-participations-page.component').then(
+            (m) => m.MyParticipationsPageComponent
           )
       }
     ]
